// Copyright (c) 2018-2022 MobileCoin, Inc.

// MUST BE KEPT IN SYNC WITH RUST CODE!

// ledger validator node data types and service descriptors.

syntax = "proto3";
import "blockchain.proto";
import "consensus_common.proto";
import "external.proto";
import "google/protobuf/empty.proto";
import "report.proto";

package validator_api;

service ValidatorAPI {
  rpc GetArchiveBlocks(consensus_common.BlocksRequest)
      returns (blockchain.ArchiveBlocks);

  rpc ProposeTx(external.Tx) returns (consensus_common.ProposeTxResponse);

  rpc FetchFogReport(FetchFogReportRequest) returns (report.ReportResponse);
}

message FetchFogReportRequest {
  // Fog report server URI.
  string uri = 1;
}